--- a/web/docs/03-recettes/spring-01-base.mdx
+++ b/web/docs/03-recettes/spring-01-base.mdx
@@ -23,7 +23,7 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
     - packaging : Jar
     - version de java 17
 
-    Ce sont les paramètres qui ont été utilisés pour le projet serveur des profs.1
+    Ce sont les paramètres qui ont été utilisés pour le projet serveur des profs.
 
     En plus de ces paramètres, tu peux ajouter les dépendances suivantes (on peut toujours les rajouter plus tard):
     - Spring Web : pour les contrôleurs REST (semblable à  WebAPI)
