--- a/web/docs/03-recettes/spring-02-contrôleur.mdx
+++ b/web/docs/03-recettes/spring-02-contrôleur.mdx
@@ -40,20 +40,14 @@ Le but est d'ajouter un premier contrôleur sur un serveur Spring Boot.
           />
 
   </TabItem>
-  <TabItem value="PartirProjet" label="Partir le projet">
 
-    Pour partir le projet, tu as plusieurs options:
-    - tu peux cliquer sur le bouton ▶ vert que tu trouveras dans la classe DemoApplication
-    - tu peux ouvrir le terminal et taper `./gradlew bootRun`
-
-    Le serveur une fois démarré est accessible sur http://localhost:8080
-
-  </TabItem>
   <TabItem value="PremierePage" label="Exécution et points d'arrêt">
 
-    Le serveur une fois démarré est accessible sur http://localhost:8080
-
-    Notre serveur actuel ne contient aucun code. Reporte-toi à la recette suivante pour ajouter un contrôleur.
+    Pour voir comment exécuter ton code en débogage:
+    1. place un point d'arrêt sur les premières lignes des fonctions **test** et **bonjour** dans le fichier MonControleur.java
+    2. pars ton serveur en mode débogage avec le bouton de débogage
+    3. ouvre un navigateur et tape l'adresse http://localhost:8080/bonjour
+    4. tu devrais voir ton point d'arrêt se déclencher
 
   </TabItem>
 </Tabs>
