--- a/web/docs/03-recettes/produire-une-trace.mdx
+++ b/web/docs/03-recettes/produire-une-trace.mdx
@@ -64,7 +64,7 @@ On aura la trace suivante:
 
 On voit que:
 - on n'indique que les lignes qui s'exécutent en vrai
-- certaines lignes s'exécutent plusieurs fois, c'est le principe de la
+- certaines lignes s'exécutent plusieurs fois, c'est le principe de la boucle!
 - on appelle ce cheminement le flot de contrôle
 
 ## Exemple avec une fonction
