Ajout des liens vers le code des projets

--- a/web/docs/03-recettes/spring-02-contrôleur.mdx
+++ b/web/docs/03-recettes/spring-02-contrôleur.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 
 Le but est d'ajouter un premier contrôleur sur un serveur Spring Boot.
 
+Le code de cette recette est disponible [ici](https://github.com/departement-info-cem/4N6-Mobile/tree/main/code/serveur2-controleur-get/).
+
 <Tabs queryString="recette-spring-controler-get">
   <TabItem value="Spring-Initializr" label="Initialiser le projet">
 
