showLineNumbers ajouté partout

--- a/web/docs/03-recettes/messages-erreur.mdx
+++ b/web/docs/03-recettes/messages-erreur.mdx
@@ -27,7 +27,7 @@ On va utiliser le network inspector
 
 ### Structure du code d'un appel asynchrone
 
-```kotlin
+```kotlin showLineNumbers
 val call = service.getSomething()
 call.enqueue(object : Callback<SomeObject> {
     override fun onResponse(call: Call<SomeObject>, response: Response<SomeObject>) {
