code markdown tableau trace fourni

--- a/web/docs/03-recettes/produire-une-trace.mdx
+++ b/web/docs/03-recettes/produire-une-trace.mdx
@@ -35,6 +35,8 @@ On aura la trace suivante:
 Dans le cas d'une séquence d'instructions, on peut voir que les instructions sont exécutées dans
 l'ordre de lecture du code. Simple!
 
+Le code *markdown* de ce tableau est disponible [ici](https://github.com/departement-info-cem/4N6-Mobile/tree/main/code/Trace/trace.md).
+
 ## Exemple avec boucle
 
 Si on a le code suivant:
