--- a/web/docs/03-recettes/produire-une-trace.mdx
+++ b/web/docs/03-recettes/produire-une-trace.mdx
@@ -89,7 +89,7 @@ fun main() {
 
 ### Trace
 
-S'il y a des fonctions dans le code, on ajouter la pile d'appels pour indiquer quelles fonctions
+S'il y a des fonctions dans le code, on doit ajouter la pile d'appels pour indiquer quelles fonctions
 ont été commencées mais pas finies.
 
 | ligne exécutée           | effet                                                      | pile d'appels |
