--- a/web/docs/03-recettes/spring-01-base.mdx
+++ b/web/docs/03-recettes/spring-01-base.mdx
@@ -13,16 +13,16 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
 
     https://start.spring.io
 
-    Voici les choix que nous recommandons:
-    - Langage : Java
+    Voici les choix que nous recommandons :
     - Système de build : Gradle Kotlin
-    - Version de Spring Boot : 3.4.1
+    - Langage : Java
+    - Version de Spring Boot : 3.4.1 (ou celle cochée par défaut)
     - packaging : Jar
     - version de java 17
 
     Ce sont les paramètres qui ont été utilisés pour le projet serveur des profs.
 
-    En plus de ces paramètres, tu peux ajouter les dépendances suivantes (on peut toujours les rajouter plus tard):
+    En plus de ces paramètres, tu peux ajouter les dépendances suivantes (on peut toujours les rajouter plus tard) :
     - Spring Web : pour les contrôleurs REST (semblable à  WebAPI)
     - Spring Security : pour la sécurité (semblable à IdentityServer)
 
