--- a/web/docs/03-recettes/spring-02-contrôleur.mdx
+++ b/web/docs/03-recettes/spring-02-contrôleur.mdx
@@ -14,9 +14,9 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
     https://start.spring.io
 
     Voici les choix que nous recommandons:
-    - Langage : Java
     - Système de build : Gradle Kotlin
-    - Version de Spring Boot : 3.4.1
+    - Langage : Java
+    - Version de Spring Boot : 3.4.1 (ou celle cochée par défaut)
     - packaging : Jar
     - version de java 17
     - Metadata
