--- a/web/docs/03-recettes/spring-02-contrôleur.mdx
+++ b/web/docs/03-recettes/spring-02-contrôleur.mdx
@@ -31,25 +31,25 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
   </TabItem>
   <TabItem value="ide" label="Créer un contrôleur">
 
-    Un fois décompressé, dans ton projet:
-    1. on va créer un fichier appelé `MonControleur.java` dans le dossier `src/main/java/org/nomprenom/testget` TODO valider
-    2. dans ce fichier on va ajouter le code suivant:
+    Un fois décompressé, dans ton projet :
+    1. Créer une classe Java `MonControleur` dans le dossier `src/main/java/org/nomprenom/testget`.
+    2. Dans cette classe, mets le code suivant :
 <GHCode
             repo="4N6-Mobile"
             filePath="code/serveur2-controleur-get/src/main/java/org/dupont/testget/MonControleur.java"
-            startLine="11"
-            endLine="24"
+            startLine="9"
+            endLine="26"
           />
 
   </TabItem>
 
   <TabItem value="PremierePage" label="Exécution et points d'arrêt">
 
-    Pour voir comment exécuter ton code en débogage:
-    1. place un point d'arrêt sur les premières lignes des fonctions **test** et **bonjour** dans le fichier MonControleur.java
-    2. pars ton serveur en mode débogage avec le bouton de débogage
-    3. ouvre un navigateur et tape l'adresse http://localhost:8080/bonjour
-    4. tu devrais voir ton point d'arrêt se déclencher
+    Pour voir comment exécuter ton code en débogage :
+    1. Place un point d'arrêt sur les premières lignes des fonctions **test** et **bonjour** dans la classe MonControleur.
+    2. Pars ton serveur (*TestgetApplication*) en mode débogage avec le bouton de débogage.
+    3. Ouvre un navigateur et tape l'adresse http://localhost:8080/bonjour.
+    4. Tu devrais voir ton point d'arrêt se déclencher.
 
   </TabItem>
 </Tabs>
