précisions sur le fichier application.properties

--- a/web/docs/03-recettes/spring-03-post-service-jpa.mdx
+++ b/web/docs/03-recettes/spring-03-post-service-jpa.mdx
@@ -46,9 +46,11 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
 
     <TabItem value="bd" label="Base de données">
 
-        Spring permet d'utiliser un fichier de propriétés pour fournir la configuration de la base de données:
+        Spring permet d'utiliser un fichier de propriétés pour fournir la configuration de la base de données :
         - il y a un format de fichier spécifique
-        - le fichier se trouve dans le dossier **resources**
+        - le fichier (*application.properties*) se trouve dans le dossier **resources**
+
+        Ajoute-lui les lignes de code suivantes :
 
     <GHCode
                 repo="4N6-Mobile"
