--- a/web/docs/03-recettes/retrofit-04-cookie.mdx
+++ b/web/docs/03-recettes/retrofit-04-cookie.mdx
@@ -69,7 +69,7 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
     
     <TabItem value="TestsHTTP.kt" label="TestsHTTP.kt">
 
-        **IMPORTANT** il faut envoyer au moins une requête à https://kickmyb-server.onrender.com/ avant le rouler
+        **IMPORTANT** il faut envoyer au moins une requête à https://kickmyb-server.onrender.com/ avant de rouler
         le test pour "réveiller" le serveur.
 
         On va illustrer le fonctionnement avec 3 tests différents
