--- a/web/docs/03-recettes/produire-une-trace.mdx
+++ b/web/docs/03-recettes/produire-une-trace.mdx
@@ -174,6 +174,6 @@ fun main() {
 |-----------------|-----------------------------------|---------------|
 | val a = 3 + 4   | a: 7                              | __main__      |
 ````
-6. Tu peux utiliser des balises html `<br/>` pour faire un retour de ligne, par exemple dans la pile d'appels.
+6. Tu peux utiliser des balises html `</br>` pour faire un retour de ligne, par exemple dans la pile d'appels.
 7. Crée-toi un projet kotlin ou Android pour [valider ta trace](#valider-ta-trace) en utilisant le débogueur.
 
