--- a/web/docs/03-recettes/spring-03-post-service-jpa.mdx
+++ b/web/docs/03-recettes/spring-03-post-service-jpa.mdx
@@ -90,9 +90,11 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
 
   <TabItem value="Service" label="Classe de service">
 
-    Dans notre application on souhaite proposer uniquement 2 opérations aux utilisateurs:
+    Dans notre application on souhaite proposer uniquement 2 opérations aux utilisateurs :
     1. ajouter un truc en validant qu'il n'y a pas déjà un truc avec le même chose
     2. accéder à la liste des trucs
+
+    On crée une classe TrucService avec ce code :
     <GHCode
                 repo="4N6-Mobile"
                 filePath="code/serveur3-service-bd-test/src/main/java/ca/cem/TrucService.java"
